# Tax-Report-Generator

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
TaxReportGenerator/: runner.py
TaxReportGenerator/BusinessRules/: GeneralRules.py  InvoiceRules.py
TaxReportGenerator/Containers/: ExcelInfoContainer.py  ReportDataContainer.py  TablesContainer.py
TaxReportGenerator/DataManipulation/: Loading.py
TaxReportGenerator/Generators/: Report.py
TaxReportGenerator/Generators/Body/: Body.py  BodyOPZ.py  BodyPDV.py  BodyPDVS.py  BodyZP.py
TaxReportGenerator/Generators/Header/: Header.py
TaxReportGenerator/Parsers/: RequestParsing.py
TaxReportGenerator/Settings/: DataSettings.py  LegalSettingsTemplate.py  TestSettings.py
data/test_data/: TestData.xlsx  TestInvoices.xls  TestKupci.xlsx  TestURA_EU_DOM.xlsx
docs/: README.md
docs/source/: conf.py  index.rst
src/tax_report_generator/: runner.py
tax_report_generator/: lxmler.py  runner.py
tax_report_generator/package_one/: module_one.py
tests/: context.py  settings.py  test_poetry_template.py
tests/BusinessRules/: test_GeneralRules.py  test_InvoiceRules.py  test_InvoicesRules.py
tests/Container/: test_ExcelInfoContainer.py  test_ReportDataContainer.py  test_TableInfoContainer.py  test_TablesContainer.py
tests/DataManipulation/: test_Loading.py
tests/Pandas/: test_pandas.py
tests/Parsers/: test_RequestParsing.py
tests/data_wrangling/: test_parser.py
tests/learning/: test_lxml.py
tests/package_one/: test_module_one.py
tests/package_two/: test_module_two.py
(+44 files in other folders)
