[tool.poetry]
name = "tax-report-generator"
version = "0.1.0"
description = "Creates XML business tax reports."
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.24.0"
openpyxl = "2.6.4"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "4.6.11"
pytest-cov = "2.10.0"
black = "^19.10b0"
sphinx = "2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
