[tool.poetry]
name = "tax-report-generator"
version = "0.1.0"
description = "Creates XML business tax reports."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Python-Project-Template"
repository = "https://github.com/MislavJaksic/Python-Project-Template"
documentation = "https://github.com/MislavJaksic/Python-Project-Template"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
openpyxl = "3.0.6"
lxml = "4.6.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^19.10b0"
pytest = "^5.2"
sphinx = "^2.3.1"

[tool.poetry.scripts]
tax-report-generator = "tax_report_generator.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
